# Composer

./: .gitignore  .gstack-daw-wireframe.html  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  README.md  TEST_PLAN.md  TODOS.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ToolchainPins.cmake
docs/: PROJECT_FORMAT.md  RELEASING.md  THIRD_PARTY_LICENSES.md  TROUBLESHOOTING.md
scripts/: dev.ps1
src/app/: FixtureMain.cpp  Main.cpp  MainComponent.cpp  MainComponent.h
src/application/: Result.h
src/audio/contracts/: AudioRenderer.h  ProjectSnapshot.h  RealtimeSafety.h  RuntimeSnapshot.h
src/audio/runtime/: CanonicalVerse.cpp  CanonicalVerse.h  ClickRenderer.cpp  ClickRenderer.h  FakeAudioDevice.cpp  FakeAudioDevice.h  PlaybackEngine.cpp  PlaybackEngine.h  ProjectCompiler.cpp  ProjectCompiler.h  ProjectRenderer.cpp  ProjectRenderer.h
src/commands/: ProjectEditor.cpp  ProjectEditor.h
src/domain/: Chord.cpp  Chord.h  IdSource.h  Instrument.h  Project.h  Rhythm.cpp  Rhythm.h  TempoMap.h  Types.h
src/persistence/: MidiFile.cpp  MidiFile.h  ProjectFile.cpp  ProjectFile.h  ProjectSerializer.cpp  ProjectSerializer.h
src/recording/: AudioFifo.cpp  AudioFifo.h  FakeRecordingDevice.cpp  FakeRecordingDevice.h  RecordingSession.cpp  RecordingSession.h  RecoveryJournal.cpp  RecoveryJournal.h  WavFile.cpp  WavFile.h
src/ui/: ArrangementBar.cpp  ArrangementBar.h  ChordPopover.cpp  ChordPopover.h  MixerPanel.cpp  MixerPanel.h  PianoRoll.cpp  PianoRoll.h  Theme.h  TimelineViewport.h  TrackList.cpp  TrackList.h  TransportBar.cpp  TransportBar.h  WaveformEditor.cpp  WaveformEditor.h
tests/: CMakeLists.txt  IntegrationMain.cpp  RealtimeAllocationProbe.h  TestRunner.h  UnitMain.cpp
tests/contracts/: VerifyAppStartup.ps1  VerifyErrorRegistry.ps1  VerifyLicenseInventory.ps1  VerifyRealtimeSource.ps1  VerifyS2Interactions.ps1  VerifyS3Recording.ps1
tests/integration/: ArrangementFixtureTests.cpp  AudioFoundationTests.cpp  MidiSongFixtureTests.cpp  PlaybackEngineTests.cpp  RecordingFixtureTests.cpp
tests/juce/: JuceUnitMain.cpp
tests/unit/: ArrangementTests.cpp  ContractTests.cpp  MidiSongTests.cpp  RecordingTests.cpp
